--- a/views/ideas/index.handlebars
+++ b/views/ideas/index.handlebars
@@ -5,7 +5,7 @@
         <a href="/ideas/edit/{{_id}}" class="btn btn-dark btn-block">
             Edit
         </a>
-        <form action="/ideas/{{_id}}?_method=Delete" method="POST">
+        <form action="/ideas/{{_id}}?_method=DELETE" method="POST">
             <input type="hidden" name="_method" value="DELETE">
             <input type="submit" class="btn btn-danger btn-block" value="DELETE">
         </form>
