--- a/views/ideas/add.handlebars
+++ b/views/ideas/add.handlebars
@@ -7,7 +7,7 @@
 <!--一個form，post to ideas-->
 <div class="card card-body">
     <h3>Notes</h3>
-    <form action="/ideas" method="POST">
+    <form action="/ideas/add" method="POST">
         <!--  title      -->
         <div class="form-group">
             <label for="title">Title</label>
