--- a/views/ideas/edit.handlebars
+++ b/views/ideas/edit.handlebars
@@ -6,7 +6,7 @@
 <!--_method with "put"-->
 <div class="card card-body">
     <h3>Edit Notes</h3>
-    <form action="/ideas/edit/{{idea.id}}?_method=PUT" method="POST">
+    <form action="/ideas/edit/{{idea._id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT">
         <div class="form-group">
             <label for="title">Title</label>
@@ -15,9 +15,7 @@
         </div>
         <div class="form-group">
             <label for="details">Details</label>
-            <textarea class="form-control" name="details" required>
-                {{idea.details}}
-            </textarea>
+            <textarea class="form-control" name="details" required>{{idea.details}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
