modules: session flash bcrypt；寫user的login和register

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,8 +11,13 @@
     <title>IdeaNotes</title>
 </head>
 <body>
-{{> _navbar}}<!--import _navbar的內容-->
-{{{body}}}
+    {{> _navbar}}<!--import _navbar的內容-->
+<div class="container">
+    {{> _msg}}
+    {{> _error}}
+    {{{body}}}
+</div>
+
 {{!--      bootstrap 的Separate--}}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
