--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -34,6 +34,14 @@
                     </div>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/users/login" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users/register" class="nav-link">Register</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
