不用passportConfig，修復bug: passportConfig.js => LocalStrategy要將自定義的passwordInput寫上(因為default：password)

--- a/views/partials/_error.handlebars
+++ b/views/partials/_error.handlebars
@@ -2,3 +2,8 @@
     <div class="alert alert-danger">{{text}}</div>
 {{else}}
 {{/each}}
+
+{{#each fail_passport}}
+    <div class="alert alert-danger">{{message}}</div>
+{{else}}
+{{/each}}
