--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -8,8 +8,8 @@
                     <input type="email" name="emailInput" class="form-control" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" class="form-control" required>
+                    <label for="passwordInput">Password</label>
+                    <input type="password" name="passwordInput" class="form-control" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
