--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,8 @@
     {{!-- bootstrap v4.6  放在CSS中 --}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
           integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>IdeaNotes</title>
+    <link rel="icon" href="/img/chickenLeg.png" type="image/x-icon">
+    <title> IdeaNotes</title>
 </head>
 <body>
     {{> _navbar}}<!--import _navbar的內容-->
