--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
     <div class="container">
+        <div class="logo">
+            <a href="/">
+                <img src="/img/logo.png" alt="Logo" width="30" height="30" style="margin-right:10px; ">
+            </a>
+        </div>
         <a href="/" class="navbar-brand">Note-App</a>
         <button class="navbar-toggler" type="button"
                 data-toggle="collapse"
@@ -20,27 +25,33 @@
                     <a href="/about" class="nav-link">About</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto">
+            {{#if user}}
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle"
                        id="navbarDropdownMenuLink"
-                       role="button" data-toggle="dropdown"
-                    >
-                        Notes
-                    </a>
+                       data-toggle="dropdown"
+                    >Notes</a>
                     <div class="dropdown-menu">
                         <a href="/ideas" class="dropdown-item">Notes</a>
                         <a href="/ideas/add" class="dropdown-item">Add Notes</a>
+                        <a href="/ideas/records" class="dropdown-item">Show Notes</a>
                     </div>
                 </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="/users/profile" class="nav-link">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/users/logout" class="nav-link">Logout</a>
+                </li>
+            {{else}}
                 <li class="nav-item">
                     <a href="/users/login" class="nav-link">Login</a>
                 </li>
                 <li class="nav-item">
                     <a href="/users/register" class="nav-link">Register</a>
                 </li>
+            {{/if}}
             </ul>
         </div>
     </div>
